--- a/SQLServer/docker-compose.yaml
+++ b/SQLServer/docker-compose.yaml
@@ -1,18 +1,28 @@
 version: '3.8'
 
+volumes:
+  sqlserver_sqlserver_data: 
+  
 services:
   sqlserver:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+    image: mcr.microsoft.com/mssql/server:2019-latest
     environment:
       - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=YourStrongPassword!123
-      - MSSQL_PID=Express
+      - SA_PASSWORD=acaf373
+      - MSSQL_PID=Developer
     ports:
-      - "1433:1433"
+      - 1433:1433
     volumes:
-      - sqlserver_data:/var/opt/mssql
-      - ./init-db:/docker-entrypoint-initdb.d
-    command: /bin/bash -c " /opt/mssql/bin/sqlservr & sleep 30 && /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'YourStrongPassword!123' -i /docker-entrypoint-initdb.d/init.sql"
-
-volumes:
-  sqlserver_data:
+      - sqlserver_sqlserver_data:/var/opt/mssql
+    restart: always
+  sqlserver.configurator:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    volumes:
+      - ./init:/docker-entrypoint-initdb.d
+    depends_on:
+      - sqlserver
+    command: >
+      bash -c '
+      /opt/mssql-tools/bin/sqlcmd -S sqlserver -U sa -P acaf373 -d master -i docker-entrypoint-initdb.d/init.sql;
+      echo "All done!";
+      '
